# failcat_rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  d1helpers  package-lock.json  package.json  wrangler.toml
src/: lib.rs  migrate_temp.sh  migrate_watch.sh  models.rs  repository.rs  sql.rs  vinlookup.rs
src/common/: mod.rs
src/models/: car.rs  dealer.rs  mod.rs  serial.rs
src/repository/: cars.rs  mod.rs  pdfs.rs
src/scraper/: mod.rs  vinlookup.rs
src/sqlhelpers/: create_serial_index.sql  debug_migrate.sql  dupe_serials.sql  migrate.sql
