[package]
name = "todo-worker"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0.0"
worker = { path = "../workers-rs/worker", features = ["d1"] }
serde_json = "1.0.97"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest-wasm = { version = "0.11.16", features = ["blocking", "wasm-streams", "serde_json"] }
itertools = "0.10.5"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
phf = { version = "0.11.1", features = ["macros"] }
bytes = "1.4.0"
chrono = { version = "0.4.26", features = ["serde", "wasmbind"] }
serde = "1.0.164"
pdf-extract = "0.6.5"
derive_more = "0.99.17"
serde_qs = "0.12.0"
serde_with = "3.0.0"
bimap = { version = "0.6.3", features = ["serde"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
